--- a/jq.css
+++ b/jq.css
@@ -5,6 +5,24 @@ html {
 	min-width: 320px;
 }
 
+/* demo page */
+.mob-btn {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 45px;
+	height: 45px;
+	background: #000;
+	cursor: pointer;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;	
+}
+/* demo page */
+
 .jq-nav {
 	position: fixed;
 	z-index: 555;
@@ -107,7 +125,7 @@ html {
 	opacity: 1;
 }
 
-.jq-nav__btn {
+/*.jq-nav__btn {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -121,7 +139,7 @@ html {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-}
+}*/
 
 .jq-nav__close {
 	cursor: pointer;
