--- a/jq.css
+++ b/jq.css
@@ -83,11 +83,17 @@ html {
 }
 
 .jq-nav__scroller {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
+	flex-direction: column;
 	position: relative;
 	height: 100%;
 	padding: 4px 0;
 	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
